--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -54,7 +54,7 @@ jobs:
 
     - name: Build and Push Docker Image
       run: |
-        docker build -t your-dockerhub-user/backend:latest .
-        docker push your-dockerhub-user/backend:latest
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/backend:latest .
+        docker push ${{ secrets.DOCKER_USERNAME }}/backend:latest
 
 
