--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,9 @@ services:
       - ./logs:/app/logs
     environment:
       - SPRING_PROFILES_ACTIVE=prod
-
+      - DB_USER=${DB_USER}
+      - DB_PASS=${DB_PASS}
+      - DB_HOST=${DB_HOST}
 
 networks:
   spring-network:
