--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,18 @@
+# Nom de l'application
 spring.application.name=project
-spring.datasource.url=jdbc:mysql://${DB_HOST}/fit_pick?serverTimezone=UTC
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Configuration de la source de données
+spring.datasource.url=jdbc:mariadb://180.149.197.212/fit_pick?serverTimezone=UTC
+spring.datasource.username=dev
+spring.datasource.password=W47p*6dW)VN?c6/3gtH(
+
+# Paramètres JPA
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update 
+spring.jpa.show-sql=true  
+spring.jpa.open-in-view=false  
+
+# Pour afficher des logs plus détaillés sur les erreurs de Spring Security et CORS
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web.filter.CorsFilter=DEBUG
