--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.application.name=project
 spring.datasource.url=jdbc:mysql://${DB_HOST}/fit_pick?serverTimezone=UTC
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+
+# Paramètres JPA
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update 
+spring.jpa.show-sql=false
+spring.jpa.open-in-view=false  
