--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - DB_USER=${DB_USER}
       - DB_PASS=${DB_PASS}
       - DB_HOST=${DB_HOST}
+      - OPENWEATHERMAP_API_KEY=${OPENWEATHERMAP_API_KEY}
 
 networks:
   spring-network:
