✨(config): add dotenv dependency and update application properties for environment variable configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,17 +2,21 @@
 spring.application.name=project
 
 # Configuration de la source de données
-spring.datasource.url=jdbc:mariadb://180.149.197.212/fit_pick?serverTimezone=UTC
-spring.datasource.username=dev
-spring.datasource.password=W47p*6dW)VN?c6/3gtH(
+spring.datasource.url=jdbc:mariadb://${DB_HOST}/fit_pick?serverTimezone=UTC
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
-# Paramètres JPA
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update 
-spring.jpa.show-sql=true  
-spring.jpa.open-in-view=false  
+# Désactiver la génération automatique du schéma
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.generate-ddl=false
 
-# Pour afficher des logs plus détaillés sur les erreurs de Spring Security et CORS
+# Afficher les requêtes SQL dans les logs
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
+
+# Logs pour diagnostiquer Hibernate et Spring Security
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web.filter.CorsFilter=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
