--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
             <version>3.0.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>java-dotenv</artifactId>
+            <version>5.2.2</version>
+        </dependency>
+
         <!-- Starter Test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
