--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     environment:
       - SPRING_PROFILES_ACTIVE=prod
       - DB_USER=${DB_USER}
-      - DB_PASS=${DB_PASS}
+      - DB_PASSWORD=${DB_PASSWORD}
       - DB_HOST=${DB_HOST}
       - OPENWEATHERMAP_API_KEY=${OPENWEATHERMAP_API_KEY}
 
