--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@
             <version>8.0.33</version>
         </dependency>
 
+        <!-- Starter Test -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
 		 <!-- Spring Boot Starter -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
