--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,25 @@
+# Nom de l'application
 spring.application.name=project
-spring.datasource.url=jdbc:mysql://${DB_HOST}/fit_pick?serverTimezone=UTC
+
+# Configuration de la source de données
+spring.datasource.url=jdbc:mariadb://${DB_HOST}/fit_pick?serverTimezone=UTC
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
+
+# Désactiver la génération automatique du schéma
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.generate-ddl=false
+
+# Afficher les requêtes SQL dans les logs
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
+
+# Logs pour diagnostiquer Hibernate et Spring Security
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web.filter.CorsFilter=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
+
+# Configuration de l'API OpenWeatherMap
 openweathermap.api.key=${OPENWEATHERMAP_API_KEY}
