--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=project
 spring.datasource.url=jdbc:mysql://${DB_HOST}/fit_pick?serverTimezone=UTC
 spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
+spring.datasource.password=${DB_PASSWORD}
 
 # Paramètres JPA
 spring.jpa.generate-ddl=true
