--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,12 +14,32 @@ spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 
-# Logs pour diagnostiquer Hibernate et Spring Security
-logging.level.org.springframework.web=DEBUG
-logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework.web.filter.CorsFilter=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql=TRACE
-
 # Configuration de l'API OpenWeatherMap
 openweathermap.api.key=${OPENWEATHERMAP_API_KEY}
+
+# Configuration SendGrid (SMTP)
+spring.mail.host=smtp.sendgrid.net
+spring.mail.port=587
+spring.mail.username=apikey
+spring.mail.password=${SENDGRID_API_KEY}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
+# JWT Configuration
+jwt.secret=${JWT_SECRET}
+jwt.expiration.auth=${JWT_EXPIRATION_AUTH}
+jwt.expiration.reset=${JWT_EXPIRATION_RESET}
+
+# Configuration des logs
+logging.level.root=INFO
+
+# Sécurité
+security.password.encoder.strength=12
+
+# Configuration des CORS
+cors.allowed.origins=http://localhost:3000,http://example.com
+cors.allowed.methods=GET,POST,PUT,DELETE
+cors.allowed.headers=*
+cors.allow.credentials=true
+
