🚀 Feature/cloth-lib: Add Clothing Library Backend Functionality (#10)
* :closed_lock_with_key:(.gitignore): add .env to .gitignore

* :rotating_light:(Docker): remove version tag in docker-compose to resolve warning

* :sparkles:(tag): add functionality to retrieve tags

* :sparkles:(clothing): implement endpoint to fetch user clothing items

* :heavy_plus_sign:(pom.xml): add multiple dependencies

* :sparkles:(Clothing): add missing setter for clo_id

* :white_check_mark:(tests): add unit tests for models and services

* :wrench:(tests): configure pom.xml with JUnit 5, Spring Boot tests, and Mockito

* :wrench:(application.properties): add JPA configuration parameters

* :sparkles:(CRUD): implement create, update, and delete functionalities for clothing

* :bug:(Clothing.java): fix Hibernate session handling bug

* :sparkles:(Tag.java): add missing setter method

* :goal_net:(Controller): add exception handling for all endpoints

* :goal_net:(Service): add exception handling for most services

* :sparkles:(DTO): add DTOs for clothing and tags

* :lock:(Webconfig.java): Add

* :wrench:(application.properties): Update environment variable configuration

* :wrench: (Docker) Update environment variable configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,10 @@ spring.datasource.url=jdbc:mariadb://${DB_HOST}/fit_pick?serverTimezone=UTC
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 
+# Paramètres JPA
+spring.jpa.show-sql=false
+spring.jpa.open-in-view=false  
+
 # Désactiver la génération automatique du schéma
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.generate-ddl=false
