--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,3 +43,4 @@ cors.allowed.methods=GET,POST,PUT,DELETE
 cors.allowed.headers=*
 cors.allow.credentials=true
 
+security.server.salt=${SECURITY_SALT}
